# mesh2solid

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  __init__.py  corpus.py  run_examples.py
docs/: architecture-v2.md
examples/: README.md
examples/complex/: bridge.stl
include/mesh2solid/: pipeline.h
include/stl2solid/: pipeline.h
src/: main.cpp  pipeline.cpp
src/pipeline/: README.md  cgal.inc  fallback.inc  io.inc  output.inc  output_axial.inc  output_blind_features.inc  output_bores.inc  output_counterbore.inc  output_countersink.inc  output_cylinder_solids.inc  output_cylindrical.inc  output_cylindrical_detection.inc  output_fallback_step.inc  output_obround.inc  output_prismatic_axial_detection.inc  output_prismatic_blind_detection.inc  output_prismatic_blind_sections.inc  output_prismatic_sections.inc  output_prismatic_support_detection.inc  output_prismatic_support_sections.inc  output_prismatic_types.inc  output_profile_sweep_detection.inc  output_profile_sweeps.inc  output_reporting.inc  output_step_bundles.inc  output_step_helpers.inc  output_step_loop.inc  output_step_types.inc  output_supports.inc  reconstruction.inc
tests/: test_cli.py  update_goldens.py
tests/fixtures/: cube.stl  rectangular_box.stl  rectangular_tube.stl  sloped_block.stl  triangular_prism.stl
tests/golden/cube/: cleaned_mesh.stl  constraints.json  reconstruction.step  regions.json  report.json
tests/golden/rectangular_box/: cleaned_mesh.stl  constraints.json  reconstruction.step  regions.json  report.json
tests/golden/rectangular_tube/: cleaned_mesh.stl  constraints.json  reconstruction.step  regions.json  report.json
tests/golden/sloped_block/: cleaned_mesh.stl  constraints.json  reconstruction.step  regions.json  report.json
tests/golden/triangular_prism/: cleaned_mesh.stl  constraints.json  reconstruction.step  regions.json  report.json
